// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render correctly 1`] = `
<div
  className="sc-AxjAm bYePpP"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="sc-AxirZ cdrbwt"
    onClick={[Function]}
  >
    <span
      className="sc-AxiKw jmlNFh"
    >
      Tab
    </span>
  </div>
</div>
`;

exports[`Tab should render correctly in active state 1`] = `
<div
  className="sc-AxjAm bYePpP"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="sc-AxirZ helBvh"
    onClick={[Function]}
  >
    <span
      className="sc-AxiKw jmlNFh"
    >
      Tab
    </span>
  </div>
</div>
`;
